@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/dhcpcd-9999.ebuild,v 1.15 2014/07/14 15:03:54 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/dhcpcd-9999.ebuild,v 1.16 2014/09/20 15:01:52 williamh Exp $
 
 EAPI=5
 
@@ -52,6 +52,7 @@ fi
 
 src_prepare()
 {
+	tc-export CC
 	epatch_user
 }
 
